service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vgnagp-svc
  namespace: vgnagp-ns
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: vg-assignment
