vgnagp.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: vgnagp-ns
  labels:
    name: vgnagp-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vgnagp-deployment
  namespace: vgnagp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vg-assignment
  template:
    metadata:
      labels:
        app: vg-assignment
    spec:
      containers:
      - name: vgnagp-container
        image: goelvaibhav57/vgnagp:vgnagp_2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /config/application.properties
      volumes:
      - name: config-volume
        configMap:
          name: vgnagp-config
---
apiVersion: v1
kind: Service
metadata:
  name: vgnagp-svc
  namespace: vgnagp-ns
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: vg-assignment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vg-assignment-ingress
  namespace: vgnagp-ns
spec:
  rules:
  - host: vgnagp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vgnagp-svc
            port:
              number: 80
  ingressClassName: nginx
